# kafka-study

./: .gitignore  LICENSE  README.md  docker-compose.yml  kafka-utils.sh
django-app/: .env.dev  docker-compose.yml
django-app/app/: Dockerfile  entrypoint.sh  pyproject.toml
django-app/app/django_app/: settings.py  urls.py
django-app/app/product/: api.py  models.py  serializers.py  urls.py
django-app/app/product/migrations/: 0001_initial.py
py-go-app/: README.md
py-go-app/consumer/: consumer.go  go.mod
py-go-app/producer/: producer.py  product.py  purchase.py
py-go-app/product_data/: sample_products.csv
